# productivityFlutterApp

./: .gitignore  CLAUDE.md  GEMINI.md  LEARNING.md  README.md  TODO.md  commit.txt  docker-compose.yml  openapi.json  package-lock.json
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  auth_utils.py  database.py  main.py  models.py  openapi.json  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 00b42cbf7cd3_fix_dimension_slugs_to_italian_and_add_.py  0160894f89ad_add_user_rpg_stats.py  29b91b1312eb_refactor_domain_models.py  2a68b632695e_initial_schema_refactored.py  35299aa78133_dimension_slug_pivot.py  3ddb370b0a94_add_rank_score_to_user.py  487c0f613212_add_duration_minutes_to_action.py  4a9e26f97b5c_add_day0_fields_to_action.py  692cf3d14e53_add_dimension_to_category.py  7289b634a242_remove_rpg_logic_and_onboarding.py  9e3b26d6d248_add_status_to_action.py  a867941c10f0_initial_migration_clean.py  f0780cb1ca9d_add_user_updated_at.py
backend/app/: main.py
backend/app/core/: config.py  exceptions.py  logging.py  rate_limit.py  security.py
backend/app/database/: session.py
backend/app/models/: __init__.py  action.py  activity_log.py  category.py  daily_log.py  dimension.py  user.py  utils.py
backend/app/repositories/: __init__.py  action_repo.py  activity_log_repo.py  base_repo.py  category_repo.py  daily_log_repo.py  dimension_repo.py  user_owned_repo.py  user_repo.py
backend/app/schemas/: __init__.py  action.py  activity_log.py  base.py  category.py  (+6 more)
backend/tests/: conftest.py  locustfile.py
(+235 files in other folders)
